# autoconf_tutorial

./: .gitignore  README.md  tutorial.md
ex_01/: configure.ac
ex_01/autom4te.cache/: output.0  requests  traces.0
ex_02/: Makefile  program.cc
ex_03/: Makefile.in  configure.ac
ex_04/: configure.ac
ex_05/: configure.ac  program.cc
ex_06/: configure.ac
ex_07/: Makefile.in  config.h.in  configure.ac  program.cc
ex_08/: Makefile.in  configure.ac  hello_libz.cc  program.cc
ex_09/: Makefile.in  configure.ac  hello_no_libz.cc
ex_10/: configure.ac
ex_11/: configure.ac
ex_12/: configure.ac
ex_13/: configure.ac
